# Anyleap

./: .gitignore  README.md  THIRD-PARTY-NOTICES.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  BACKLOG.md  PLAN.md  RELEASING.md  SETTINGS-MAP.md  WIRELESS.md
scripts/: fetch-binaries.ps1  release.ps1
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  wheel_swipe.rs
src/components/: ControlBar.tsx  ControlWindow.tsx  DeviceRow.tsx  DeviceStateBadge.tsx  DevicesPanel.tsx  DevicesTab.tsx  PairDialog.tsx  SavedDevicesPanel.tsx  SessionsPanel.tsx  SettingsPanel.tsx
src/components/ui/: button.tsx  card.tsx
src/lib/: controlConfig.ts  deviceStatus.ts  keycodes.ts  persist.ts  qr.ts  savedDevices.ts  styles.ts  tauri.ts  types.ts  updateCheck.ts
src/store/: useAppStore.ts
